<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hy"
    tools:context=".debitor">

    <EditText
        android:id="@+id/dbt4"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dbt4"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dbt2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dbt2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dbt3"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dbt3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dbt1"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dbt1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/dp1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/t3"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dp2"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="116dp"
        android:text="@string/dp2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="116dp"
        android:text="@string/dp3"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dp4"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:layout_marginTop="116dp"
        android:text="@string/dp4"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="664dp"
        android:text="@string/b4"
        android:textColor="#FFF"
        android:background="#FF3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>