<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hy"
    tools:context=".AddDebitor">

    <Button
        android:id="@+id/b3"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="68dp"
        android:background="#FF3F51B5"
        android:onClick="pressCancel"
        android:text="@string/b3"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/adt5"
        tools:text="CANCEL" />

    <TextView
        android:id="@+id/ad4"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="296dp"
        android:text="@string/ad4"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Due" />

    <EditText
        android:id="@+id/adt4"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adt3"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ad3"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="240dp"
        android:text="@string/ad3"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Paid" />

    <EditText
        android:id="@+id/adt"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#00B61E1E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ad1"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="128dp"
        android:text="@string/ad1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/t2"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textColorHint="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ad2"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="184dp"
        android:text="@string/ad2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Amount" />

    <EditText
        android:id="@+id/adt2"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b2"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="65dp"
        android:background="#FF3F51B5"
        android:text="@string/b2"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1"
        tools:text="SAVE" />

    <Button
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="348dp"
        android:background="#FF3F51B5"
        android:onClick="Calender"
        android:text="@string/date1"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>